[package]
name = "dioxus-markdown"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.5.6"
dioxus-web = "0.5.6"
rust-web-markdown = { git = "https://github.com/amaali7/rust-web-markdown/", default-features=false }

[features]
debug = ["rust-web-markdown/debug"]

[workspace]
members = [
    "examples/*"
]
